--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A boilerplate for Node.js web applications",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "./node_modules/.bin/nodemon --exec babel-node index.js"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,11 @@
   "bugs": {
     "url": "https://github.com/vrmartins/api-nodejs-express-babel-jwt-boilerplate/issues"
   },
-  "homepage": "https://github.com/vrmartins/api-nodejs-express-babel-jwt-boilerplate#readme"
+  "homepage": "https://github.com/vrmartins/api-nodejs-express-babel-jwt-boilerplate#readme",
+  "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.4.2",
+    "nodemon": "^1.18.10"
+  }
 }
