--- a/package.json
+++ b/package.json
@@ -33,5 +33,14 @@
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.2",
     "nodemon": "^1.18.10"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "dotenv-safe": "^6.1.0",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.20",
+    "swagger-jsdoc": "^3.2.8",
+    "swagger-ui-express": "^4.0.2",
+    "winston": "^3.2.1"
   }
 }
