--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "body-parser": "^1.18.3",
     "dotenv-safe": "^6.1.0",
     "express": "^4.16.4",
+    "express-swagger-generator": "^1.1.13",
     "mongo-tenant": "^1.6.0",
     "mongoose": "^5.4.20",
     "swagger-jsdoc": "^3.2.8",
