--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@babel/preset-env": "^7.4.2",
     "babel-plugin-istanbul": "^5.1.1",
     "chai": "^4.2.0",
-    "eslint": "^5.15.3",
+    "eslint": "^5.16.0",
+    "eslint-config-google": "^0.12.0",
     "faker": "^4.1.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.10",
