--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "./node_modules/.bin/nodemon --exec babel-node index.js",
     "lint": "eslint ./",
-    "lint:fix": "eslint ./ --fix",
+    "lint:fix": "./node_modules/.bin/eslint ./ --fix",
     "dev:container": "docker-compose -f docker-compose-dev.yml up && docker-compose down",
     "test": "NODE_ENV=test nyc --reporter=html --reporter=text node_modules/.bin/_mocha  --opts test/integration/mocha.opts test/integration/**/*.spec.js",
     "test:container": "docker-compose -f docker-compose-test.yml up --abort-on-container-exit && docker-compose -f docker-compose-test.yml down"
@@ -49,10 +49,13 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "crypto": "^1.0.1",
     "dotenv-safe": "^6.1.0",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "express-swagger-generator": "^1.1.13",
     "helmet": "^3.16.0",
+    "jsonwebtoken": "^8.5.1",
     "mongo-tenant": "^1.6.0",
     "mongoose": "^5.4.20",
     "swagger-jsdoc": "^3.2.8",
