--- a/package.json
+++ b/package.json
@@ -39,8 +39,13 @@
     "@babel/preset-env": "^7.4.2",
     "babel-plugin-istanbul": "^5.1.1",
     "chai": "^4.2.0",
-    "eslint": "^5.16.0",
+    "eslint": "^6.0.1",
     "eslint-config-google": "^0.12.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
     "faker": "^4.1.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.10",
@@ -48,6 +53,7 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "@hapi/joi": "^15.1.0",
     "body-parser": "^1.18.3",
     "crypto": "^1.0.1",
     "dotenv-safe": "^6.1.0",
