--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@hapi/joi": "^15.1.0",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv-safe": "^6.1.0",
     "express": "^4.16.4",
