--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "mongo-tenant": "^1.6.0",
     "mongoose": "^5.4.20",
     "mongoose-unique-validator": "^2.0.3",
+    "nodemailer": "^6.3.0",
     "swagger-jsdoc": "^3.3.0",
     "swagger-ui-express": "^4.0.2",
     "winston": "^3.2.1"
